update header tests